--- a/Report/references.bib
+++ b/Report/references.bib
@@ -110,6 +110,14 @@
  year={2018}
 }
 
+@article{AppsChallengePlaybook,
+ title={The Apps Challenge Playbook},
+ author={Reichenthal, Jonathan and Williams, Alison},
+ year={2015},
+ month = {04},
+ url = {https://www.cityofpaloalto.org/files/assets/public/it-department/parking-lot/apps-challenge-playbook-v5-final.pdf}
+}
+
 @book{BitbyBit, 
  address = {Princeton, NJ}, 
  edition = {Open Review Edition}, 
@@ -124,7 +132,7 @@
  author = {The New York Times},
  year = 2019,
  month = {09},
- url = {\\ https://www.youtube.com/watch?v=Np5ri-KktNs}
+ url = {https://www.youtube.com/watch?v=Np5ri-KktNs}
 }
 
 @online {NokiaWisdomOfTheCrowds,
@@ -132,13 +140,13 @@
  author = "Malla Poikela",
  year = 2018,
  month = {05},
- url = "\\ https://www.nokia.com/blog/use-wisdom-crowds-design-smarter-cities-businesses-and-networks/"
+ url = "https://www.nokia.com/blog/use-wisdom-crowds-design-smarter-cities-businesses-and-networks/"
 }
 
 @online {NokiaAVACrowdAnalytics,
  title = "Nokia Ava Crowd Analytics",
  author = "NOKIA",
- url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\ https://www.nokia.com/networks/portfolio/ insights-and-analytics/}
+ url = {https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/}
 }
 
 @online {EnforcementTracker,
@@ -158,7 +166,7 @@
 @online{BeyondOpenData,
  title = "Beyond Transparency (Part IV, Chapter 15: Beyond Open Data: The Data-Driven City)",
  author = "Michael Flowers",
- url = {\\ https://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/},
+ url = {https://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/},
  date = {2013-10-16}
 }
 
@@ -223,4 +231,30 @@
  url = {https://www.marketing-interactive.com/nokia-and-starhub-join-analytics-force-hopeful-in-creating-effective-advertising},
  journal = {Marketing Interactive},
  date = {2018-02-26}
+}
+
+@article{SmartCityPaloAlto,
+ shorthand = "SCPA18",
+ title = "Smart City Palo Alto",
+ author = "Lisa Smith",
+ url = {https://hub.beesmart.city/city-portraits/smart-city-portrait-palo-alto},
+ journal = "bee smart city",
+ date = {2018-10-01}
+}
+
+@article{SmartCityAmsterdam,
+ shorthand = "SCA17",
+ title = "Amsterdam Smart City: A world leader in Smart City development",
+ author = "Lisa Smith",
+ url = {https://hub.beesmart.city/city-portraits/smart-city-portrait-amsterdam},
+ journal = "bee smart city",
+ date = {2017-12-10}
+}
+
+@online{SmartCityAmsterdamYT,
+ shorthand = "SCAYT",
+ title = "Smart City: How Amsterdam Revolutionizes Energy | Future Smart City Projects",
+ author = "DW Shift",
+ url = {https://www.youtube.com/watch?v=pkTBjMGKPK8},
+ date = {2021-02-18}
 }
