Some changes to the boston part, not yet finished.

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -203,6 +203,12 @@
 	
 	\section{Boston}
 	\startsection
+		Just like Amsterdam, Boston's then Mayor Thomas Michael Menino, threw the hat into the ring of innovation by launching experimental smart initiatives in the year 2010. In his vision, Boston should be a host for innovations, rather than depend on the ones thought up and developed silently in universities and research firms. This realization of this vision has lead to the creation of numerous jobs and companies, while also marking Boston's Seaport as the Innovation District in the eyes of Mayor Menino for years to come.\\
+		Two focus points of the 
+		%[Source: https://convene.com/catalyst/is-boston-the-smartest-city/ ,Title:Is Boston the Smartest City? ,  Author:By Natalie Holmes , Accessed:05.12.21]
+		
+		
+		
 		\subsection[Waze]{Waze \cite{InformationSuperhighway}}
 		\startsubsection
 			Waze is an application that specialises on route planning and traffic avoidance.
@@ -211,6 +217,7 @@
 		\subsection[Street Bump]{Street Bump \cite{EGG17}}
 		\startsubsection
 			In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers.
+			%[Source: http://www.streetbump.org/about  ,  Notes:Street Bump has been produced by the Mayor's Office of New Urban Mechanics in Boston., Accessed:05.12.21]	
 		\closesection	
 		\subsection[Yelp]{Yelp \cite{YelpBoston}}
 		\startsubsection
