--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -204,20 +204,32 @@
 	\section{Boston}
 	\startsection
 		Just like Amsterdam, Boston's then Mayor Thomas Michael Menino, threw the hat into the ring of innovation by launching experimental smart initiatives in the year 2010. In his vision, Boston should be a host for innovations, rather than depend on the ones thought up and developed silently in universities and research firms. This realization of this vision has lead to the creation of numerous jobs and companies, while also marking Boston's Seaport as the Innovation District in the eyes of Mayor Menino for years to come.\\
-		Two focus points of the 
+		A selection of these initiatives will be presented in the following sections, as they focus heavily on crowd-sourcing in respect to smart urban participatory applications and smart transportation.
 		%[Source: https://convene.com/catalyst/is-boston-the-smartest-city/ ,Title:Is Boston the Smartest City? ,  Author:By Natalie Holmes , Accessed:05.12.21]
 		
+		\subsection{BOS:311}
+		\startsubsection
+		% The one above and [https://311.boston.gov/]
+		The application called 'BOS:311' 'deputizes' the citizens of Boston and allows them to report various issues found on the streets like potholes, illegal graffiti and so on. The users can report an issue by selecting out of a number of services, like 'Litter', which best corresponds to the found issue, add the location over Google Maps, take a photo, and add a description. Additionally the user can state if he wishes to share the report with the public, and he can also record his name and contact information, thought these will not be publicized. 
+		\closesection
 		
+		\subsection{Where's my School bus?}
+		\startsubsection
+		% The one above and [https://schoolbus.bostonpublicschools.org//]
+		Another application for parents is 'Where's my School bus?'. The application allows the parents to track their children's school bus in real-time by logging into the application using their child's information and student number. This of course implies that all of Boston's school buses are fitted with tracking functionality.
+		\closesection
+			
 		
 		\subsection[Waze]{Waze \cite{InformationSuperhighway}}
 		\startsubsection
 			Waze is an application that specialises on route planning and traffic avoidance.
-	Bostons traffic management department partnered with Waze to combat the cities traffic issues. Waze delivers hereby the data of driving app users to the Boston traffic engineers which then adjust the cities traffic signals. The traffic department also sends back this updated information in addition with future planned adjustements to Waze in turn.
+	Bostons traffic management department partnered with Waze to combat the cities traffic issues. Waze delivers hereby the data of driving app users to the Boston traffic engineers which then adjust the cities traffic signals. The traffic department also sends back this updated information in addition with future planned adjustments to Waze in turn.
 		\closesection
 		\subsection[Street Bump]{Street Bump \cite{EGG17}}
 		\startsubsection
 			In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers.
-			%[Source: http://www.streetbump.org/about  ,  Notes:Street Bump has been produced by the Mayor's Office of New Urban Mechanics in Boston., Accessed:05.12.21]	
+			%[Source: http://www.streetbump.org/about  ,  Notes:Street Bump has been produced by the Mayor's Office of New Urban Mechanics in Boston., Accessed: 05.12.21]
+			Street Bump is used by 	
 		\closesection	
 		\subsection[Yelp]{Yelp \cite{YelpBoston}}
 		\startsubsection
@@ -288,9 +300,12 @@
 		To better decide which workers are suited for which tasks, a task recommendation and allocation system can be used that, for example, collects and analyses the participants context information, like location, usage of the platform, previous work evaluation, and other data points. Such a system can improve the efficiency of task assignment in the context of throughput and quality.
 	% There is more information about MCS, should this also be added?
 	% The paper also states some possible further applications of MCS
-		\subsection{Privacy control of Mobile Crowd-Sourcing}
+		\subsection{Privacy control and concerns of Mobile Crowd-Sourcing}
 		\startsubsection
 			Privacy concerns arise due to the need of environmental data of the participants for the task recommendation system. If the system does not have any safety measures an attack can breach the privacy  of the platform.
+			
+			%[Source: https://ieeexplore.ieee.org/document/7180511 ,Title:Security and privacy in mobile crowdsourcing networks: challenges and opportunities , Authors: K. Yang, K. Zhang, J. Ren, and X. Shen]
+			
 			\closesection  
 	\closesection
 
