--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -224,12 +224,25 @@
 		\startsubsection
 			Waze is an application that specialises on route planning and traffic avoidance.
 	Bostons traffic management department partnered with Waze to combat the cities traffic issues. Waze delivers hereby the data of driving app users to the Boston traffic engineers which then adjust the cities traffic signals. The traffic department also sends back this updated information in addition with future planned adjustments to Waze in turn.
+
 		\closesection
 		\subsection[Street Bump]{Street Bump \cite{EGG17}}
 		\startsubsection
 			In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers.
 			%[Source: http://www.streetbump.org/about  ,  Notes:Street Bump has been produced by the Mayor's Office of New Urban Mechanics in Boston., Accessed: 05.12.21]
-			Street Bump is used by 	
+			%[https://www.boston.gov/departments/innovation-and-technology/street-bump-mobile-application-terms-service, Notes:  Last updated: 6/22/16]
+			Citizens of Boston can download Street Bump from the App Store on their smartphones. Afterwards they are able to record their car trips and send the record to Boston itself. The potholes and street bumps can be recognized on the city maps by using the phones accelerometer and GPS. The city of Boston only inspect such roadway problems if there are multiple hits from large volumes of data, this provides some form of protection against false positives.\\
+			Street bumps terms and conditions state that the following data is collected and how it is used:\\
+			Major changes in vertical accelerations are combined with GPS locations, a trip consists of all such bumps. Street bump does not collect the route data itself. 
+			All bumps are consumed by a clustering algorithm to discover the likelihood of road issues. To focus only on this five more data points are collected, namely date and time of the bump, the GPS accuracy, speed of the car, the course, in essence a scale from 0-360, where 0 is north, the distance travelled, and phone information, like a unique ID, operating system, model and so on.
+			Optional information is the contact information of the user which is not collected by default. If the user chooses to then some personal information like name or email will be linked to the unique ID.\\
+			Further data that is collected to enhance Street Bump are the aggregated use statistics, invalid bumps with added reason why it is valid and stripped location information, failed upload information, and failed trip information\\
+			The following entities can see the data:
+			All data is viewable by the city of Boston and its partners. The participating municipalities and other entities can see the identified obstacles and the composite bump data.
+			Neither the contact information nor user specific bump data is shared with these entities.
+			The public can see the obstacles and composite bumps on 'streetbump.org'. The individual bumps will only have the date, location and accelerometer readings. If the specific bump is not part of the obstacle it will not appear.  The site will also display a map of recent bumps. The map is hereby centered on a collection of bumps and not necessarily where the bump or trip was. Users are able to choose if their bump data appears publicly.\\
+			In the international usage, the user gives permission to store and process their data in any countries where Street Bump facilities exist. This includes the transfer of personal information. If the user disagrees with the policy then he should not use Street Bump.
+			
 		\closesection	
 		\subsection[Yelp]{Yelp \cite{YelpBoston}}
 		\startsubsection
@@ -300,12 +313,19 @@
 		To better decide which workers are suited for which tasks, a task recommendation and allocation system can be used that, for example, collects and analyses the participants context information, like location, usage of the platform, previous work evaluation, and other data points. Such a system can improve the efficiency of task assignment in the context of throughput and quality.
 	% There is more information about MCS, should this also be added?
 	% The paper also states some possible further applications of MCS
-		\subsection{Privacy control and concerns of Mobile Crowd-Sourcing}
+		\subsection{Privacy control, privacy concerns, and privacy threats of Mobile Crowd-Sourcing}
 		\startsubsection
-			Privacy concerns arise due to the need of environmental data of the participants for the task recommendation system. If the system does not have any safety measures an attack can breach the privacy  of the platform.
-			
+			Privacy concerns arise due to the need of environmental data of the participants for the task recommendation system. If the system does not have any safety measures an attack can breach the privacy of the platform.	
 			%[Source: https://ieeexplore.ieee.org/document/7180511 ,Title:Security and privacy in mobile crowdsourcing networks: challenges and opportunities , Authors: K. Yang, K. Zhang, J. Ren, and X. Shen]
-			
+			The human involvement, task crowd-sourcing itself, and the dynamic topology can make privacy protection difficult.
+			For example the sensing worker can collect and send data pertaining to his location, which can reveal his movement, or could also contain identifying or private information that could be collected by malicious entities. Additionally on part of the service provider, the difficulty for privacy security increases especially if the outsourced tasks contain sensitive information to complete the task. Another challenge for privacy protection can be the changing topology of the network, due to joining, leaving and movement of workers, and weaken the possible protection against outside attackers.\\
+			Furthermore there exist privacy threats that can be identified as privacy threats from data and privacy threats from tasks itself. As mentioned before, the privacy of the sensed data consists of the danger that collected data contains identifying information, or more general information that can leak privacy, be it environmental, locational, routine, and so on. Similarly, the privacy of computing inputs considers the sensitive data that is enclosed in the tasks itself, which may leak the data of contributors/workers, data owners and other related people. This encapsulated data could consist for example as personal health information, business reports, among other information. Finally the privacy of computing results can occur if the task results itself contain sensitive information that should not leak to the worker or the service provider, and only remain in the hands of the end-user. Evidently, setting up systems that accomplish such conditions can be difficult.\\
+			Further threats to privacy could be identified originating from the tasks, in the form of task privacy of end users, and task privacy of participants. Focused on the end user privacy, it can occur that the content of the stated tasks can reveal information of the end user to the service provider, for example if the task pertains to traffic information on the street, it could be inferred that the end user is in possession of a car. For the privacy of the participants it is important that the tasks itself do not leak information about the participants/workers. Again the example of worker location tracking can be mentioned.\\
+			%[Source:https://ieeexplore.ieee.org/document/6693368  ,Title: Towards A Framework for Privacy-Aware Mobile Crowdsourcing , Authors: Y. Wang, Y. Huang, and C. Louis]
+			Additional privacy concerns have been identified in 'Towards A Framework for Privacy-Aware Mobile Crowdsourcing'. The concern of disclosed user identity states that many mobile crowdsourcing systems collect profile informations of their participants/workers, like name, password, email address and so on. If this data could be breached and retrieved by attackers, then it could have far reaching consequences to the participant. Again mentioned has been the disclosure of user location and activities, just as in the previous paragraph, but with the added idea that the worker/participant may be aware that his activity and location may be monitored but not to which degree, due to ignorance. A second thought goes to the requirement for users that want to share data about general locations and activity but not for sensitive places. The lack of user privacy awareness, as mentioned before, is the idea that the user does not have the knowledge of how the data will be used and in how much privacy risk he is, and therefore has no choice but to trust the application.\\
+			Indeed the inability to know or deduce the usage of the gathered data for the common man itself brings further vulnerability. It could occur that the gathered data itself is relatively privately secure but if businesses combine this data with further information gathered from other sources could lead to insights about private information of the users. Lastly, one must consider the usage of mobile devices itself due to increased vulnerability to attacks and security breaches. Mobile devices mostly have limited computational resources to incorporate certain cryptographic protections.\\
+			%[Source:https://ieeexplore.ieee.org/abstract/document/8080202  ,Title:A Survey on Security, Privacy and Trust in Mobile Crowdsourcing , Authors: W. Feng, Z. Yan, H. Zhang, K. Zeng, Y. Xiao, and Y. T.]
+			The publication 'A Survey on Security, Privacy and Trust in Mobile Crowdsourcing' explores various schemes for mobile crowd-sourcing networks. The evaluation is based upon the fulfillment of requirements in regard to trust, privacy and security of the schemes. Especially for guaranteeing privacy, differentially privatize the sensed data and addition of noise, homomorphic encryption for the personal information, or grouping areas of workers together for further generalization, or data aggregation have been proposed in some schemes for example. Nonetheless, it is difficult to develop a scheme for mobile crowdsourcing that fulfils all three requirements for trust, security and privacy.
 			\closesection  
 	\closesection
 
